Feito alterações no Style e começando a fazer a o DOM e validação do JavaScript

--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
             </div>
             
             <button id="resetBtn" class="secondary">
-                Analisar outro email
+                Analisar outro Email
             </button>
          </section>
-    </main>
     <footer class="rodape">
             <p>Desenvolvido por Kayke Ragoso</p>
     </footer>
