Feito o FormData para enviar texto ou arquivo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <label for="emailFile">Upload de arquivo (.txt ou .pdf)</label>
               <input type="file" name="emailFile" id="emailFile" accept=".txt,.pdf"/>
 
-              <button type="submit">Analise Email</button>
+              <button type="submit">Analisar Email</button>
 
         </form>
         <!-- SCANEAR EMAIL -->
@@ -55,7 +55,7 @@
             </button>
          </section>
     <footer class="rodape">
-            <p>Desenvolvido por Kayke Ragoso</p>
+            <p>Desenvolvido por Kayke Ragoso | Processo Seletivo <a href="https://www.autou.io/">AutoU</a></p>
     </footer>
     <script src="JS/main.js"></script>
 </body>
